Resolves: tdf#132519 Use string reference syntax for CELL("ADDRESS";...)

... so the result can be used with INDIRECT().

Change-Id: I76e4d7739e22c53a3cfa3e004a9b24dc3dfcd233
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140021
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins